# Interpretable-protective-antigen-classifier

./: LICENSE  README.md  pyproject.toml
artifacts/: log_reg_model.joblib  random_forest_model.joblib  xgboost_model.joblib  xgboost_model_seed1.joblib  xgboost_model_seed2.joblib  xgboost_model_seed3.joblib
data/processed/: labeled_sequences.csv
data/raw/: protegen-all-4.0-2019-01-09.faa
data/raw/proteomes/: uniprotkb_proteome_UP000000579_2025_12_16.fasta  uniprotkb_proteome_UP000001012_2025_12_16.fasta  uniprotkb_proteome_UP000001584_2025_12_16.fasta  uniprotkb_proteome_UP000007207_2025_12_16.fasta
results/baseline/: feature_importances.csv
results/baseline_v3/: metrics.json
results/test/: feature_importances.csv  metrics.json  permutation_importance.csv
results/test3/: metrics.json  permutation_importance.csv
results/testing_new_data/: feature_importances.csv  metrics.json
results/testing_new_negatives/: feature_importances.csv  metrics.json
results/tuned_lenient/: feature_importances.csv  metrics.json
results/tuned_lenient_rebalanced/: metrics.json
results/tuned_lenient_rebalanced_multiple/: aggregated_metrics.json
results/tuned_lenient_rebalanced_multiple/seed_1/: feature_importances.csv  (+1 more)
results/tuned_run/: feature_importances.csv  metrics.json
results/tuned_strict/: feature_importances.csv  metrics.json
scripts/: prepare_dataset.py
src/interpretable_antigen_classifier/: __init__.py  cli.py  config.py
src/interpretable_protective_antigen_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+13 files in other folders)
