[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interpretable-protective-antigen-classifier"
version = "0.0.1"
description = "Interpretable classifier pipeline for protective antigens"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "biopython>=1.83",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
shap = ["shap>=0.44"]
xgboost = ["xgboost>=1.7"]

[project.scripts]
antigen-pipeline = "interpretable_antigen_classifier.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["interpretable_antigen_classifier", "interpretable_antigen_classifier.*"]
